BUG FIX: Other_projects image was overflowing the border-radius at top

--- a/style.css
+++ b/style.css
@@ -1131,6 +1131,7 @@ article {
 	/*margin-right: 30px !important;*/
 	border-radius: 5px;
 	box-shadow: 10px 10px 30px rgba(0,0,0,0.1);
+	transform: scale(1, 1);
 
 	transition: all 250ms ease-out;
 }
